--- a/resources/style/scss/style.scss
+++ b/resources/style/scss/style.scss
@@ -1,5 +1,5 @@
 /**
- * Icon Captcha Plugin: v2.1.3
+ * Icon Captcha Plugin: v2.2.0
  * Copyright © 2017, Fabian Wennink (https://www.fabianwennink.nl)
  *
  * Licensed under the MIT license: http://www.opensource.org/licenses/mit-license.php
@@ -154,7 +154,7 @@
         }
 
         &__credits {
-            display:none;
+            display: block !important;
             font-size: 9px;
             padding: 3px;
             text-align: center;
