--- a/resources/style/scss/style.scss
+++ b/resources/style/scss/style.scss
@@ -1,5 +1,5 @@
 /**
- * Icon Captcha Plugin: v2.2.0
+ * Icon Captcha Plugin: v2.2.1
  * Copyright © 2017, Fabian Wennink (https://www.fabianwennink.nl)
  *
  * Licensed under the MIT license: http://www.opensource.org/licenses/mit-license.php
@@ -167,6 +167,10 @@
                 &:hover {
                     @include crossBrowser(transition, (color .1s linear));
                 }
+            }
+
+            &--hide {
+                visibility: hidden;
             }
         }
     }
