Updated to version 2.4.0
- Updated the README; added installation instructions.
- Updated the examples to work with the new front-end package.
- Added the latest front-end package files to the assets folder.

Previous 2.4.0 changes:
- commit/9433d426fe4f5ceb5d636ee79beea776e8c54390
- commit/7747be271334b5cf87d74f5cf3c0dd27650abf7b
- commit/119eedf73f61f1cb7e0c2690bdcea07495501444

--- a/assets/demo.css
+++ b/assets/demo.css
@@ -1,3 +1,10 @@
+/**
+ * Icon Captcha Plugin: v2.4.0
+ * Copyright © 2017, Fabian Wennink (https://www.fabianwennink.nl)
+ *
+ * Licensed under the MIT license: http://www.opensource.org/licenses/mit-license.php
+ */
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -19,9 +26,9 @@ body {
     font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: url(../assets/polygon-background.png), -webkit-linear-gradient(20deg,#6D1AF3,#51D0EF);
-    background-image: url(../assets/polygon-background.png), -moz-linear-gradient(20deg,#6D1AF3,#51D0EF);
-    background-image: url(../assets/polygon-background.png), linear-gradient(20deg,#6D1AF3,#51D0EF);
+    background-image: url(polygon-background.png), -webkit-linear-gradient(20deg,#6D1AF3,#51D0EF);
+    background-image: url(polygon-background.png), -moz-linear-gradient(20deg,#6D1AF3,#51D0EF);
+    background-image: url(polygon-background.png), linear-gradient(20deg,#6D1AF3,#51D0EF);
 }
 
 a {
