First major progress on creating IconCaptcha 3
- Updated the icon generation to generate a single image containing all the used icons instead of multiple, single icon images.
- The icon borders will be drawn onto the image instead of using CSS borders.
- Now validating the selection based on the clicked X and Y position on the image.
- Added multiple image randomizers (flipping, rotating).
- Randomized showing 6 or 7 icons, instead of always showing 5.
- Added new way to set captcha options.
- Refactored the captcha-request.php file.
- Removed the usage of icon/image hashes.
- Removed adding random noise to the icons.
- Removed all @since comments.
- Included the updated development CSS and JS files of the front-end package.
- Dropped support for Internet Explorer.
- Dropped support for PHP < 5.6.

--- a/assets/demo.css
+++ b/assets/demo.css
@@ -1,6 +1,6 @@
 ﻿/**
- * Icon Captcha Plugin: v2.5.0
- * Copyright © 2017, Fabian Wennink (https://www.fabianwennink.nl)
+ * IconCaptcha Plugin: v3.0.0
+ * Copyright © 2021, Fabian Wennink (https://www.fabianwennink.nl)
  *
  * Licensed under the MIT license: http://www.opensource.org/licenses/mit-license.php
  */
@@ -69,6 +69,11 @@ h2 {
 
 .shields {
     margin-bottom: 40px;
+}
+
+.shields .shields-row {
+    display: block;
+    margin-bottom: 20px;
 }
 
 .btn {
@@ -166,7 +171,7 @@ h2 {
     -webkit-transform: rotate(-45deg);
 }
 
-.captcha-holder {
+.iconcaptcha-holder {
     margin: 20px auto !important;
 }
 
