Updated license link + latest compiled assets
- Updated the license url to redirect to the GitHub license page.
- Changed demo pages 'X-UA-Compatible' meta tag to IE 10.
- Removed old jQuery version library link, updated with v3.6.0 which works with IconCaptcha's browser compatibility of Internet Explorer 10+.

--- a/assets/demo.css
+++ b/assets/demo.css
@@ -2,7 +2,7 @@
  * IconCaptcha Plugin: v3.0.0
  * Copyright © 2021, Fabian Wennink (https://www.fabianwennink.nl)
  *
- * Licensed under the MIT license: http://www.opensource.org/licenses/mit-license.php
+ * Licensed under the MIT license: https://www.fabianwennink.nl/projects/IconCaptcha/license
  */
 
 * {
