Updated examples to use the new default widget class name

--- a/examples/assets/demo.css
+++ b/examples/assets/demo.css
@@ -172,7 +172,7 @@ h2 {
     -webkit-transform: rotate(-45deg);
 }
 
-.iconcaptcha-holder {
+.iconcaptcha-widget {
     margin: 20px auto !important;
 }
 
