--- a/examples/assets/demo.css
+++ b/examples/assets/demo.css
@@ -1,6 +1,5 @@
 * {
     -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -20,7 +19,6 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-image: url(polygon-background.png), -webkit-linear-gradient(20deg, #6D1AF3, #51D0EF);
-    background-image: url(polygon-background.png), -moz-linear-gradient(20deg, #6D1AF3, #51D0EF);
     background-image: url(polygon-background.png), linear-gradient(20deg, #6D1AF3, #51D0EF);
 }
 
@@ -35,8 +33,8 @@ p {
 }
 
 h2 {
-    font-size: 36px;
-    font-size: 2.25rem;
+    font-size: 28px;
+    margin-bottom: 5px;
 }
 
 .container {
@@ -69,51 +67,43 @@ h2 {
     margin-bottom: 20px;
 }
 
+.smaller {
+    font-size: 75%;
+}
+
 .btn {
     letter-spacing: 1px;
     border: 1px solid rgba(255, 255, 255, 0.8);
     position: relative;
     display: inline-block;
     cursor: pointer;
-    padding: 13px 25px 12px 25px;
-    font-size: 18px;
-    font-size: 1.125rem;
-    -webkit-border-radius: 30px;
-    -moz-border-radius: 30px;
-    -ms-border-radius: 30px;
-    border-radius: 70px;
-    -webkit-transition: background 0.15s ease;
-    -moz-transition: background 0.15s ease;
-    -ms-transition: background 0.15s ease;
-    transition: background 0.15s ease;
-    -webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    transform: translateZ(0);
+    padding: 12px 15px;
+    font-size: 15px;
+    border-radius: 10px;
     text-transform: uppercase;
+    background: #fff;
+    color: #5396ED;
+    font-weight: 600;
+    transform: translateZ(0);
+    transition: background 0.15s ease, box-shadow 0.15s ease;
+    -webkit-transition: background 0.15s ease, box-shadow 0.15s ease;
+    box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5);
+    -webkit-box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5);
 }
 
 .btn:hover {
-    font-weight: bold;
+    transform: translateZ(0);
+    font-weight: 600;
     color: #5396ED;
     background: #fff;
-    -webkit-transition: background 0.15s ease, box-shadow 0.15s ease;
-    -moz-transition: background 0.15s ease, box-shadow 0.15s ease;
-    -ms-transition: background 0.15s ease, box-shadow 0.15s ease;
     transition: background 0.15s ease, box-shadow 0.15s ease;
-    -webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.5);
-    -moz-box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.5);
-    box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.5);
+    -webkit-transition: background 0.15s ease, box-shadow 0.15s ease;
+    box-shadow: 0 0 0 7px rgba(255, 255, 255, 0.5);
+    -webkit-box-shadow: 0 0 0 7px rgba(255, 255, 255, 0.5);
 }
 
 .btn small {
-    font-size: 60%;
+    font-size: 65%;
     display: block;
 }
 
@@ -123,14 +113,26 @@ h2 {
     bottom: 30px;
 }
 
+.btn-invert {
+    box-shadow: 0 0 0;
+    background: transparent;
+}
+
+input[type="submit"] {
+    color: #ffffff;
+    background: none;
+    outline: 0;
+    font-family: inherit;
+}
+
 .section {
     display: block;
-    margin-bottom: 50px;
+    margin-bottom: 75px;
 }
 
 .section .btn {
     margin: 20px 10px 0;
-    min-width: 300px;
+    min-width: 250px;
 }
 
 .copyright p {
@@ -177,17 +179,12 @@ h2 {
     text-transform: uppercase;
 }
 
-input[type="submit"] {
-    color: #ffffff;
-    background: none;
-    outline: 0;
-}
-
 .themes {
     width: 200px;
     margin: 60px auto 0;
     display: block;
     overflow: hidden;
+    font-weight: bold;
 }
 
 .themes .theme {
@@ -222,10 +219,10 @@ input[type="submit"] {
 
 .themes .theme--light span:first-child {
     background: #fafafa;
-    border: 1px solid #d8d8d8;
+    border: 3px solid #f1f1f1;
 }
 
 .themes .theme--dark span:first-child {
     background: #4c4c4c;
-    border: 1px solid #404040;
+    border: 3px solid #454545;
 }
